perf:对请求中间件进行优化

--- a/开发文档.md
+++ b/开发文档.md
@@ -29,15 +29,73 @@ B站的全站的链接基本上就分为以下几种：
 
 ## 需求
 
-​	你无法控制用户的输入的内容，我们在开发的时候，就做好异常处理，当出现错误的时候，我要提示，输入内容不正确，哪里不正确，同时也方便我们后期调试。
+​	有时候我们无法控制用户的输入的内容，我们在开发的时候，就做好异常处理，当出现错误的时候，我要提示，输入内容不正确，哪里不正确，同时也方便我们后期调试。
 
-### 一、对输入的内容的判断
+### 对输入的内容的判断
 
 首先我们要对用户输入的内容进行匹配，我要提取用户输入的内容中是否包含链接
 
 - [x] 是，如果包含则进行下一步的判断，匹配域名是否为www.bilibili.com和[b23.tv]()，如果是[b23.tv]()这个域名就直接使用[requests库](https://requests.readthedocs.io/projects/cn/zh_CN/latest/)进行重定向获取到真是地址。从`ur`l中匹配番号，如果没有匹配到就提示获取不到或者链接不正确。
-- [ ] 否，对其内容进行再次匹配，不是链接有可能是直接的番号，直接从内容匹配番号，如果还是没有匹配到就提示请输入的内容。
+- [x] 否，对其内容进行再次匹配，不是链接有可能是直接的番号，直接从内容匹配番号，如果还是没有匹配到就提示请输入的内容。
 
 **流程如下**
 
 ![1681431795968.jpg](https://img.hecady.com/i/2023/2023004014064389cf582a3f.jpg)
+
+------
+
+### 番号调用方法
+
+在类里面写了几个方法，`self.regex_url()`是
+
+```python
+    def get_video_id(self):
+        """
+        正则匹配 内容是否包含视频ID
+        :return: BV1S24y1w7rU、av号匹配成功转为bv号、ep743051、ss26266、md28229233
+        :return {"code": -404, "message": "请检查内容是否包含视频ID"}
+        ep号 ss号 md号 不带前缀
+        """
+        id_dict = {
+            "bv": self.regexBv,
+            "av": self.regexAv,
+            "ep": self.regexEp,
+            "ss": self.regexSs,
+            "md": self.regexMd
+        }
+        url_regex_result = self.regex_url()
+        for id_type, regex_func in id_dict.items():
+            id_regex_result = regex_func(url_regex_result)
+            if id_regex_result:
+                self.id_type = id_type
+                return id_regex_result
+        return {"code": -404, "message": "请检查内容是否包含视频ID"}
+```
+
+### 接口返回值说明
+
+### 多P视频 
+
+```json
+{
+  "id": 1284230,
+  "title": "前端开发-登录界面分享",
+  "cover": "https://archive.biliimg.com/bfs/archive/48c289e04260444cfa46365c9b26018e72fd61b8.jpg",
+  "mid": 13409681,
+  "intro": "",
+  "sign_state": 0,
+  "attribute": 140,
+  "ep_count": 2,
+  "season_type": 1,
+  "is_pay_season": false
+}
+```
+
+|   参数    |       说明       |
+| :-------: | :--------------: |
+| ep_count  | 标识代表视频数量 |
+| season_id |  多P视频标识？   |
+|           |                  |
+
+
+
